WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258943
Highlight logic incorrect for checking author set text color
https://bugs.webkit.org/show_bug.cgi?id=258943
Summary
Highlight logic incorrect for checking author set text color
Jessica Cheung
Reported
2023-07-06 13:10:53 PDT
https://www.w3.org/TR/css-highlight-api-1/#priorities
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-06 13:11:45 PDT
<
rdar://problem/111866042
>
Jessica Cheung
Comment 2
2023-07-11 18:28:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15765
Jessica Cheung
Comment 3
2023-07-14 20:34:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15858
EWS
Comment 4
2023-07-17 16:41:39 PDT
Committed
266117@main
(ec22e0752450): <
https://commits.webkit.org/266117@main
> Reviewed commits have been landed. Closing PR #15858 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug