Highlight logic incorrect for checking user set text color https://bugs.webkit.org/show_bug.cgi?id=258943 rdar://111706100

Reviewed by NOBODY (OOPS!).

Added hasExplicitlySetFillColor flag.
Changed Highlights logic to check flag instead of canvasText.
Updated TestExpectations due to passing test(s).

* LayoutTests/TestExpectations:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/rendering/StyledMarkedText.cpp:
(WebCore::resolveStyleForMarkedText):
(WebCore::coalesceAdjacentWithSameRanges):
* Source/WebCore/rendering/TextPaintStyle.h:
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::hasExplicitlySetFillColor const):
(WebCore::RenderStyle::InheritedFlags::operator== const):
* Source/WebCore/rendering/style/RenderStyleSetters.h:
(WebCore::RenderStyle::setHasExplicitlySetFillColor):
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyValueColor):
(WebCore::Style::BuilderCustom::applyInitialColor):
* Source/WebCore/style/StyleBuilderState.h:
(WebCore::Style::BuilderState::isAuthorOrigin const):