Source/WebCore/rendering/style/RenderStyle.h
@@ -1589,6 +1589,8 @@ public:
     inline SVGPaintType fillPaintType() const;
     inline StyleColor fillPaintColor() const;
     inline void setFillPaintColor(const StyleColor&);
+    inline void setHasExplicitlySetFillColor(bool);
+    inline bool hasExplicitlySetFillColor() const;
     inline float fillOpacity() const;
     inline void setFillOpacity(float);
 
@@ -2195,6 +2197,8 @@ private:
         unsigned autosizeStatus : 5;
 #endif
         // 51 bits
+        unsigned hasSetFillColor : 1;
+        // 52 bits
     };
 
     // This constructor is used to implement the replace operation.
